<resources>
    <string name="app_name">Patient App</string>
    <string name="input_placeholder">Write a message</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="their_message_sample">How are you doing? This is a long message that should probably wrap.</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="dont_know_text">Don\'t Know</string>
    <string name="hint">Input</string>
    <string name="home">Home</string>
    <string name="email_icon">email_icon</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="title_activity_navigation_home">NavigationHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Developer Steven</string>
    <string name="nav_header_subtitle">devsteevens@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="home_text">CHUKA MEDICS APP</string>
    <string name="profile">Profile</string>
    <string name="weight">Enter weight in kg</string>
    <string name="height">Enter Height in cm</string>
    <string name="calculateBMI">Calculate BMI</string>
</resources>
